fix overflow

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,10 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 p {
     font-size: 18px;
 }
